--- a/Lane-Detection.vcxproj.filters
+++ b/Lane-Detection.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="calibrator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
