Add Calculate Curvature Functionality

--- a/Lane-Detection.vcxproj.filters
+++ b/Lane-Detection.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="calibrator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="windowbox.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="calibrator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="windowbox.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
