--- a/Lane-Detection.vcxproj
+++ b/Lane-Detection.vcxproj
@@ -132,10 +132,12 @@
   <ItemGroup>
     <ClCompile Include="calibrator.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="windowbox.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="calibrator.h" />
     <ClInclude Include="utils.h" />
+    <ClInclude Include="windowbox.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
